# pdf_deconstructor

./: README.md  pyproject.toml
src/: .gitignore  destructor.py  main.py  notebook.ipynb
